data/derived/comb/progs/unify/prog0665.ml.out
Characters 30-62:
  "[" ^ (List.map (fun x -> x ^ "; ") l) "]";;
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string list
       This is not a function; it cannot be applied.
